--- a/public/index.html
+++ b/public/index.html
@@ -6,21 +6,30 @@
     <link rel="stylesheet" href="assets/css/style.css"/>
     <script src="node_modules/angular/angular.min.js"></script>
     <script src="node_modules/angular-route/angular-route.min.js"></script>
+    <script src="node_modules/angular-cookies/angular-cookies.min.js"></script>
+    <script src="node_modules/query-string/index.js"></script>
+    <script src="node_modules/angular-oauth2/dist/angular-oauth2.min.js"></script>
     <script src="node_modules/angular-ui-bootstrap/dist/ui-bootstrap.js"></script>
     <script src="assets/app/app.js"></script>
     <script src="assets/components/authentication/authentication.js"></script>
     <title>ShareIdea Be Free</title>
   </head>
   <body>
-    <header class="col-md-2 col-md-offset-5 text-center">
-        <h3>ShareIdea</h3>
-    </header>
-    	<div class="text-center" id="wrap">
-          <div ng-view></div>
-      </div>
-    <footer>
-
-      <h5>&#169; Priyank Paliwal</h5>
-    </footer>
+    <header class="row header-background" ng-controller="headerController">
+        <div class="col-md-2">
+          <img class="img-responsive logo-header" src="assets/images/appimage.jpg" alt="ShareIdea"/>
+        </div>
+        <div class="col-md-8">""</div>
+        <div class="col-md-2 valign">
+              <button type="submit" class="btn btn-primary"  ng-click="signIn()">Sign In</button>
+              <button type="submit" class="btn btn-primary margin-left-button" ng-click="register()">Register</button>
+        </div>
+  </header>
+  <div class="text-center" id="wrap">
+        <div ng-view></div>
+  </div>
+  <footer class="footer">
+       <h5>&#169; Priyank Paliwal</h5>
+  </footer>
   </body>
 </html>
