--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,11 @@
     <script src="node_modules/angular-ui-bootstrap/dist/ui-bootstrap.js"></script>
     <script src="assets/app/app.js"></script>
     <script src="assets/components/authentication/authentication.js"></script>
+    <script src="assets/components/main.js"></script>
+    <script src="assets/components/newPost/post.js"></script>
+    <script src='//cdn.tinymce.com/4/tinymce.min.js'></script>
+    <script type="text/javascript" src="node_modules/angular-ui-tinymce/src/tinymce.js"></script>
+  </script>
     <title>ShareIdea Be Free</title>
   </head>
   <body>
