--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
   <body>
     <header class="row header-background" ng-controller="headerController">
         <div class="col-md-2">
-          <img class="img-responsive logo-header" src="assets/images/appimage.jpg" alt="ShareIdea"/>
+          <a href="/"><img class="img-responsive logo-header" src="assets/images/appimage.jpg" alt="ShareIdea" /></a>
         </div>
         <div class="col-md-8">""</div>
         <div class="col-md-2 valign">
