--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,14 @@
     <script src="node_modules/query-string/index.js"></script>
     <script src="node_modules/angular-oauth2/dist/angular-oauth2.min.js"></script>
     <script src="node_modules/angular-ui-bootstrap/dist/ui-bootstrap.js"></script>
+    <script src="node_modules/angular-utils-pagination/dirPagination.js"></script>
+
     <script src="assets/app/app.js"></script>
+    <script src="assets/services/auth.js"></script>
     <script src="assets/components/authentication/authentication.js"></script>
     <script src="assets/components/main.js"></script>
     <script src="assets/components/newPost/post.js"></script>
+    <script src="assets/components/articleListings/article.js"></script>
     <script src='//cdn.tinymce.com/4/tinymce.min.js'></script>
     <script type="text/javascript" src="node_modules/angular-ui-tinymce/src/tinymce.js"></script>
   </script>
